--- a/src/components/DateItem/index.css
+++ b/src/components/DateItem/index.css
@@ -1,7 +1,38 @@
 .date-item {
-  margin-top: 0;
+  display: flex;
+  flex-direction: column;
+
   margin-right: 10px;
-  margin-bottom: 0;
-  margin-left: 0;
-  padding: 0;
+
+  align-items: center;
+}
+
+.date-item:last-of-type {
+  margin-right: 0;
+}
+
+.date-item:hover {
+}
+
+.date-item__weekday {
+}
+
+.date-item__monthday {
+  line-height: 35px;
+
+  width: 35px;
+  height: 35px;
+
+  cursor: pointer;
+  text-align: center;
+
+  border-radius: 50%;
+}
+
+.date-item__monthday:hover {
+  color: #2962ff;
+  background-color: rgba(3, 169, 244, 0.15);
+}
+
+.date-item__monthday--active {
 }
