--- a/src/components/DateList/index.css
+++ b/src/components/DateList/index.css
@@ -4,6 +4,7 @@
   max-width: 600px;
   margin-top: 25px;
   margin-right: auto;
+  margin-bottom: 25px;
   margin-left: auto;
 
   justify-content: space-around;
