--- a/src/components/WeatherList/index.css
+++ b/src/components/WeatherList/index.css
@@ -3,3 +3,11 @@
   margin-right: auto;
   margin-left: auto;
 }
+
+.city-name {
+  font-size: 23px;
+
+  margin-bottom: 10px;
+
+  text-align: center;
+}
