--- a/src/components/WeatherItem/index.css
+++ b/src/components/WeatherItem/index.css
@@ -1,36 +1,46 @@
 .weather-item {
-  position: relative;
-
   display: flex;
   flex-direction: row;
 
   padding-top: 20px;
-  padding-right: 5vw;
+  padding-right: 3vw;
   padding-bottom: 20px;
-  padding-left: 5vw;
+  padding-left: 3vw;
 
   outline: 1px dotted black;
   background-color: rgba(144, 238, 144, 0.15);
-}
-
-.weather-item__left-column {
-  display: flex;
-  flex-direction: row;
 
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
-.weather-item__monthday {
-  position: absolute;
-  top: 10px;
-  left: 10px;
+
+.weather-item__time {
+  display: flex;
+
+  align-items: center;
+}
+
+.weather-item__hour {
+  min-width: 16px;
+}
+.weather-item__main {
+  display: flex;
+
+  align-items: center;
+}
+
+.weather-item__temp {
+  font-size: 20px;
+}
+
+.weather-item__info-item {
+  margin-top: 8px;
+}
+
+.weather-item__info-item:first-child {
+  margin-top: 0;
 }
 
 .weather-item__icon {
   max-height: 100%;
-}
-
-.weather-item__right-column {
-  min-width: 130px;
-  margin-left: auto;
 }
