--- a/src/components/DateList/index.css
+++ b/src/components/DateList/index.css
@@ -2,10 +2,10 @@
   display: flex;
 
   max-width: 600px;
-  margin-top: 25px;
   margin-right: auto;
-  margin-bottom: 25px;
   margin-left: auto;
+  padding-top: 25px;
+  padding-bottom: 25px;
 
   justify-content: space-around;
 }
