--- a/src/containers/App/index.css
+++ b/src/containers/App/index.css
@@ -1,4 +1,19 @@
-  *,
+.container-fluid {
+  padding-right: 5px;
+  padding-left: 5px;
+}
+
+.row {
+  margin-right: -5px;
+  margin-left: -5px;
+}
+
+[class*=col-] {
+  padding-right: 5px;
+  padding-left: 5px;
+}
+
+*,
 *:after,
 *:before {
   box-sizing: border-box;
